--- a/src/components/clicki-poper/clicki-poper.html
+++ b/src/components/clicki-poper/clicki-poper.html
@@ -1,5 +1,5 @@
 <ion-list>
-    <ion-item *ngFor="let item of dataList" (click)="chooseItem(item)">
+    <ion-item tappable *ngFor="let item of dataList" (click)="chooseItem(item)">
         {{item.text}}
     </ion-item>
 </ion-list>
