--- a/src/pages/homePage/main/main.scss
+++ b/src/pages/homePage/main/main.scss
@@ -18,6 +18,7 @@ page-main {
             min-width: 63px;
             text-align: center;
             color: rgb(128, 128, 128);
+            font-size: 1.5rem;
         }
         .choosed {
             border-bottom: 2px solid green;
