--- a/src/components/clicki-poper/clicki-poper.html
+++ b/src/components/clicki-poper/clicki-poper.html
@@ -1,8 +1,9 @@
 <ion-list>
-    <ion-item tappable *ngFor="let item of dataList" (click)="chooseItem(item)">
-        <ion-icon name="{{item.icon}}" item-start color="life"></ion-icon>
+    <ion-item no-lines tappable *ngFor="let item of dataList" (click)="chooseItem(item)">
+        <ion-icon name="{{item.icon}}" item-start color="gloomy"></ion-icon>
         {{item.text}}
     </ion-item>
+
 </ion-list>
 <!--<ion-scroll>
     <div class="scroll_item" *ngFor="let item of dataList" (click)="chooseItem(item)">
