--- a/src/components/clicki-poper/clicki-poper.scss
+++ b/src/components/clicki-poper/clicki-poper.scss
@@ -1,4 +1,18 @@
 clicki-poper {
+    ion-item {
+        height: 45px;
+        border-bottom: 1px solid rgb(148, 148, 149)!important;
+        ion-icon {
+            // margin-top: 20px!important;
+        }
+        ion-label {
+            font-size: 1.5rem;
+        }
+    }
+     :last-child {
+        border-bottom: none!important;
+    }
+    font-family: cursive;
     .list-ios {
         margin: 0px!important;
     }
@@ -10,4 +24,10 @@ clicki-poper {
             font-size: 2.2rem;
         }
     }
+}
+
+//修改全局弹出pop宽度
+.popover-content {
+    width: 50%!important;
+    left: calc(50% - 2px)!important;
 }
