--- a/src/pages/clickPage/click/click.scss
+++ b/src/pages/clickPage/click/click.scss
@@ -6,36 +6,39 @@ page-click {
         font-family: fantasy;
         border-bottom: 1px solid green;
         max-height: 50%;
-        min-height: 36%;
-        padding-top: 32px;
+        min-height: 30%;
+        margin: 0px 20px;
     }
     .click_button_center {
         left: -moz-calc(50% - 40px);
         left: -webkit-calc(50% - 40px);
         left: calc(50% - 40px);
     }
-    .click_button_out .one,
-    .click_button_out .two {
-        width: 80px;
-        height: 80px;
-        border: 3px solid green;
-        border-radius: 50%;
-        padding: 3px;
-        position: absolute;
-        bottom: 88px;
-        -webkit-animation: warn 1.5s ease-out;
-        -moz-animation: warn 1.5s ease-out;
-        animation: warn 1.5s ease-out;
-        -webkit-animation-iteration-count: infinite;
-        -moz-animation-iteration-count: infinite;
-        animation-iteration-count: infinite;
-    }
-    .click_button_out p {
-        font-family: cursive;
-        text-align: center;
-        font-size: 1.6rem;
-        font-style: oblique;
-        text-shadow: 2px 2px 2px gold;
+    .click_button_out {
+        .one,
+        .two {
+            width: 80px;
+            height: 80px;
+            border: 3px solid green;
+            border-radius: 50%;
+            padding: 3px;
+            position: absolute;
+            bottom: 88px;
+            -webkit-animation: warn 1.5s ease-out;
+            -moz-animation: warn 1.5s ease-out;
+            animation: warn 1.5s ease-out;
+            -webkit-animation-iteration-count: infinite;
+            -moz-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+        }
+        p {
+            font-family: cursive;
+            text-align: center;
+            font-size: 1.2rem;
+            font-style: oblique;
+            text-shadow: 2px 2px 2px gold;
+            padding: 0px 31px;
+        }
     }
     .click_button_in {
         width: 68px;
