--- a/src/pages/basicModule/welcome/welcome.scss
+++ b/src/pages/basicModule/welcome/welcome.scss
@@ -6,13 +6,13 @@ page-welcome {
         left: 35%;
     }
     .slide_01 {
-        background: url('../assets/bg-img/slide2.jpeg')
+        background: url('../assets/img/bg-img/slide2.jpeg')
     }
     .slide_02 {
-        background: url('../assets/bg-img/slide1.jpeg')
+        background: url('../assets/img/bg-img/slide1.jpeg')
     }
     .slide_03 {
-        background: url('../assets/bg-img/slide3.jpeg')
+        background: url('../assets/img/bg-img/slide3.jpeg')
     }
     p {
         color: rgb(0, 0, 0);
