--- a/src/components/show-msg/show-msg.html
+++ b/src/components/show-msg/show-msg.html
@@ -12,7 +12,7 @@
     </ion-toolbar>
 </ion-header>-->
 
-<ion-content (click)="close()" scrollY="false" has-bouncing="true">
+<ion-content (click)="close()" tappable scrollY="false" has-bouncing="true">
     <section (click)="$event.stopPropagation();" class="msg_content">
         <ion-header>
             <ion-toolbar color="life">
