--- a/src/pages/homeModule/more-fuc/more-fuc.scss
+++ b/src/pages/homeModule/more-fuc/more-fuc.scss
@@ -1,3 +1,53 @@
 page-more-fuc {
-
+    ion-content {
+        background-color: rgb(220, 220, 220)!important;
+    }
+    ion-slides {
+        max-height: 180px;
+        background: white
+    }
+    .flex_box {
+        display: inline-flex;
+        margin-top: 10px;
+        display: flex;
+        height: 66px;
+        flex-wrap: wrap;
+        .flex_item {
+            min-height: 45%;
+            min-width: 16%;
+            max-width: 20%;
+            margin: 2px;
+            flex-grow: 1;
+            img {
+                height: 50px;
+                width: 50px;
+                display: inherit;
+                margin-left: 10%;
+            }
+            div {
+                background-size: 100% 100%;
+                height: 40px;
+                width: 40px;
+                // border: 1px solid rgb(220, 220, 220);
+                margin-left: 15%;
+                border-radius: 50%;
+                padding: 8px;
+                ion-icon {
+                    text-align: center;
+                    align-items: center;
+                    font-size: 2.4rem;
+                }
+            }
+            span {
+                font-family: cursive;
+                font-size: 1rem
+            }
+        }
+    }
+    .swiper-slide {
+        align-items: stretch;
+    }
+    .swiper-container-horizontal>.swiper-pagination-bullets {
+        bottom: 2px
+    }
 }
