仿造支付宝页面

--- a/src/pages/customModule/custom-add/custom-add.scss
+++ b/src/pages/customModule/custom-add/custom-add.scss
@@ -58,5 +58,12 @@ page-custom-add {
     }
     .input-cover {
         position: static!important;
-    }
+        pointer-events: auto!important;
+    } // .input-has-focus .input-cover {
+    //     position: static!important;
+    //     pointer-events: auto!important;
+    // }
+    // .input-has-focus {
+    //     pointer-events: auto!important;
+    // }
 }
