--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -12,3 +12,8 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+//定义全局css方法
+@mixin box($width, $height) {
+    width: $width;
+    height: $height;
+}
