--- a/src/pages/homeModule/more-fuc/more-fuc.scss
+++ b/src/pages/homeModule/more-fuc/more-fuc.scss
@@ -1,9 +1,10 @@
 page-more-fuc {
+    $fontSize: 1.2rem;
     ion-content {
         background-color: rgb(220, 220, 220)!important;
     }
     ion-slides {
-        max-height: 180px;
+        max-height: 170px;
         background: white
     }
     .flex_box {
@@ -19,16 +20,13 @@ page-more-fuc {
             margin: 2px;
             flex-grow: 1;
             img {
-                height: 50px;
-                width: 50px;
+                @include box(45px, 45px);
                 display: inherit;
-                margin-left: 10%;
+                margin-left: 18%;
             }
             div {
                 background-size: 100% 100%;
-                height: 40px;
-                width: 40px;
-                // border: 1px solid rgb(220, 220, 220);
+                @include box(40px, 40px);
                 margin-left: 15%;
                 border-radius: 50%;
                 padding: 8px;
@@ -40,8 +38,29 @@ page-more-fuc {
             }
             span {
                 font-family: cursive;
-                font-size: 1rem
+                font-size: $fontSize
             }
+        }
+        .nomal_item {
+            min-width: initial!important;
+            max-width: initial!important;
+            &:first-child {
+                border-right: 1px solid map-get($colors, life);
+            }
+        }
+    }
+    .small_p {
+        font-size: $fontSize;
+        color: black;
+        button {
+            background: rgb(255, 255, 255);
+            border: 1px solId rgb(255, 165, 0);
+            padding: 3px 5px;
+            color: rgb(255, 165, 0);
+            border-radius: 3px;
+            margin: 0px 5px;
+            min-height: 23px;
+            // min-width: 53px;
         }
     }
     .swiper-slide {
@@ -49,5 +68,8 @@ page-more-fuc {
     }
     .swiper-container-horizontal>.swiper-pagination-bullets {
         bottom: 2px
+    }
+    .swiper-pagination-bullet {
+        @include box(5px, 5px)
     }
 }
