--- a/src/pages/homeModule/main/main.scss
+++ b/src/pages/homeModule/main/main.scss
@@ -1,31 +1,26 @@
 page-main {
-    .toolbar-ios {
-        padding: 0px
+    ion-card {
+        position: relative;
+        text-align: center;
+        margin: 5px 0px 0px 0px !important;
+        width: 100%!important;
     }
-    ion-scroll[scrollX] {
-        white-space: nowrap;
-        // width: -moz-calc(100% - 40px);
-        // width: -webkit-calc(100% - 40px);
-        // width: calc(100% - 40px);
-        height: 42px;
-        .scroll-item {
-            display: inline-block;
-            height: -moz-calc(100% - 2px);
-            height: -webkit-calc(100% - 2px);
-            height: calc(100% - 2px);
-            height: 43px;
-            line-height: 40px;
-            min-width: 63px;
-            text-align: center;
-            color: rgb(128, 128, 128);
-            font-size: 1.5rem;
-        }
-        .choosed {
-            border-bottom: 2px solid green;
-            color: green;
-        }
-        .scroll-content {
-            height: 60px;
-        }
+    ion-card:first-child {
+        margin-top: 0px!important;
+    }
+    .card-title {
+        position: absolute;
+        top: 36%;
+        font-size: 2.0em;
+        width: 100%;
+        font-weight: bold;
+        color: #fff;
+    }
+    .card-subtitle {
+        font-size: 1.0em;
+        position: absolute;
+        top: 52%;
+        width: 100%;
+        color: #fff;
     }
 }
