--- a/src/components/show-msg/show-msg.html
+++ b/src/components/show-msg/show-msg.html
@@ -13,7 +13,7 @@
 </ion-header>-->
 
 <ion-content (click)="close()" tappable scroll="false" has-bouncing="true">
-    <section (click)="$event.stopPropagation();" class="msg_content">
+    <section jdfdrag (click)="$event.stopPropagation();" class="msg_content">
         <!--<ion-header>
             <ion-toolbar color="life">
                 <ion-title>
