--- a/src/pages/homeModule/custom-home/custom-home.scss
+++ b/src/pages/homeModule/custom-home/custom-home.scss
@@ -7,7 +7,7 @@ page-custom-home {
         // width: -moz-calc(100% - 40px);
         // width: -webkit-calc(100% - 40px);
         // width: calc(100% - 40px);
-        height: 42px;
+        // height: 42px;
         .scroll-item {
             display: inline-block;
             height: -moz-calc(100% - 2px);
